# reindeer-rs

./: Cargo.toml  LICENSE.md  Readme.md
src/: entity.rs  error.rs  lib.rs  macros.rs  relation.rs  test_entities.rs
src/relation/: descriptor.rs  mod.rs  parent_child_relation.rs  sibling_relation.rs
src/test/: mod.rs  test_entities.rs
