[package]
name = "reindeer"
version = "0.1.2"
edition = "2021"
description = "A small entity-based embedded database with a minimal no-SQL relationnal model, written in pure Rust."
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/tiesselune/reindeer-rs"
keywords = ["sled","database","entity","rocksdb","bincode"]
categories = ["database","filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
bincode = "1.3.3"
paste = "1.0"
hashers = "1"

[dev-dependencies]
uuid = { version = "1.1.2", features = ["fast-rng", "v4"] }